feat: Demarche libre, Hidden Snake

--- a/ubuntu/apps/demarche-libre.html
+++ b/ubuntu/apps/demarche-libre.html
@@ -74,7 +74,7 @@
             onclick="goTo('ubuntu.html')"
           ></button>
         </div>
-        <div class="window-content p-0">
+        <div class="window-content p-0 position-relative">
           <div class="checkerboard-bg">
             <div class="article-body">
               <h2>La Démarche Libre et Open Source</h2>
