feat: integrer la page surveillance

--- a/windows/windows.html
+++ b/windows/windows.html
@@ -34,7 +34,7 @@
             </div>
             <div class="icon" onclick="openSurveillancePage()">
                 <img src="assets/img/9qpncvgj7tjkria132cpti9onv.png" alt="Surveillance">
-                <span>Surveillance<br>Infos</span>
+                <span>Windows Nous <br>Surveille</span>
             </div>
         </div>
 
