chore: changing from remote images to local

--- a/ubuntu/ubuntu.html
+++ b/ubuntu/ubuntu.html
@@ -20,18 +20,9 @@
       <div class="system-info">Linux Ubuntu</div>
       <span class="top-bar-text-display" id="clock"></span>
       <div class="top-icons d-flex align-items-center gap-3">
-        <img
-          src="https://img.icons8.com/ios-glyphs/24/ffffff/wifi.png"
-          class="top-icon"
-        />
-        <img
-          src="https://img.icons8.com/ios-glyphs/24/ffffff/medium-volume.png"
-          class="top-icon"
-        />
-        <img
-          src="https://img.icons8.com/ios-glyphs/24/ffffff/shutdown.png"
-          class="top-icon"
-        />
+        <img src="./assets/wifi.png" class="top-icon" />
+        <img src="./assets/medium-volume.png" class="top-icon" />
+        <img src="./assets/shutdown.png" class="top-icon" />
       </div>
     </div>
 
@@ -39,23 +30,17 @@
     <div class="sidebar d-flex flex-column justify-content-between pt-2">
       <div class="sidebar-middle d-flex flex-column align-items-center">
         <img
-          src="https://img.icons8.com/ios-filled/50/ffffff/home.png"
+          src="./assets/home.png"
           class="side-icon mb-4"
           onclick="goTo('ubuntu.html')"
         />
-        <img
-          src="https://img.icons8.com/ios-filled/50/ffffff/console.png"
-          class="side-icon mb-4"
-        />
-        <img
-          src="https://img.icons8.com/ios-filled/50/ffffff/settings.png"
-          class="side-icon mb-4"
-        />
+        <img src="./assets/console.png" class="side-icon mb-4" />
+        <img src="./assets/settings.png" class="side-icon mb-4" />
       </div>
 
       <div class="sidebar-bottom d-flex flex-column align-items-center pb-3">
         <img
-          src="https://img.icons8.com/ios-filled/50/ffffff/circled-menu.png"
+          src="./assets/circled-menu.png"
           class="side-icon"
           title="Applications"
         />
