--- a/windows/windows.html
+++ b/windows/windows.html
@@ -29,8 +29,8 @@
                 <span>Mon<br>Ordinateur</span>
             </div>
             <div class="icon" onclick="openSupportChat()">
-                <img src="assets/img/livechat-online-chat-computer-icons-chat-room-web-chat-others-92e60a1efac72303df62cb9811a1f796.png" alt="Support">
-                <span>Chat<br>Bruti</span>
+                <img src="assets/img/chat.png" alt="Support">
+                <span>CatGPNulle<br></span>
             </div>
             <div class="icon" onclick="openSurveillancePage()">
                 <img src="assets/img/9qpncvgj7tjkria132cpti9onv.png" alt="Surveillance">
