feat: faille secu roger

--- a/windows/windows.html
+++ b/windows/windows.html
@@ -36,6 +36,10 @@
                 <img src="assets/img/9qpncvgj7tjkria132cpti9onv.png" alt="Surveillance">
                 <span>Windows Nous <br>Surveille</span>
             </div>
+            <div class="icon" onclick="openSearchDog()">
+                <img src="assets/img/chien_roger_xp.png" alt="Rechercher">
+                <span>Rechercher<br></span>
+            </div>
         </div>
 
         <div id="popup-container"></div>
