--- a/ubuntu/apps/parametres.html
+++ b/ubuntu/apps/parametres.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Femmes et Informatique - Ubuntu</title>
+    <title>Paramètres - Ubuntu</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -55,51 +55,56 @@
         <div
           class="window-header d-flex justify-content-between align-items-center px-2"
         >
-          <span>Femmes et Informatique</span>
+          <span>Paramètres</span>
           <button
             class="btn-close-window"
             onclick="goTo('ubuntu.html')"
           ></button>
         </div>
         <div class="window-content p-3 px-4 text-center">
-          <h2>Femmes et Informatique</h2>
+          <h2>Paramètres Ubuntu</h2>
 
-          <!-- Introduction -->
+          <!-- Introduction / Petit clin d’œil -->
           <section class="mb-4 px-3 w-100 text-center">
             <p class="px-3 text-center w-75 mx-auto">
-              Depuis les pionnières comme Ada Lovelace jusqu'aux ingénieures,
-              chercheuses et entrepreneuses d'aujourd'hui, les femmes ont joué
-              un rôle essentiel dans le développement de l'informatique.
-              Pourtant, elles restent encore sous-représentées dans les
-              formations et métiers du numérique. Il est important de mettre en
-              valeur leur contribution et de sensibiliser le public à
-              l'importance de la mixité dans ce domaine.
+              Bienvenue dans vos paramètres Ubuntu ! Ici, vous pouvez tout
+              personnaliser : le thème, les raccourcis, les fonds d'écran…
+              <strong
+                >moi je peux changer et personnaliser tout mes paramètres, pas
+                comme Windows 😎</strong
+              >
             </p>
           </section>
 
-          <!-- Vidéo -->
-          <section class="mb-4 text-center">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/ioP9L_1-vKE?si=DcGUtoXW3ECsc2EC"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              allowfullscreen
-            ></iframe>
+          <!-- Paramètres simulés -->
+          <section class="mb-4 text-start w-75 mx-auto">
+            <h5>Apparence :</h5>
+            <ul>
+              <li>Thème sombre / clair</li>
+              <li>Icônes personnalisées</li>
+              <li>Animations de la fenêtre</li>
+            </ul>
+
+            <h5>Son :</h5>
+            <ul>
+              <li>Volume principal</li>
+              <li>Notifications personnalisées</li>
+            </ul>
+
+            <h5>Bureau :</h5>
+            <ul>
+              <li>Fonds d'écran multiples</li>
+              <li>Raccourcis personnalisables</li>
+              <li>Espaces de travail</li>
+            </ul>
           </section>
 
-          <!-- Flyer -->
-          <section class="mb-4 text-center">
-            <a
-              href="../assets/img/video/flyer.pdf"
-              download
-              class="btn btn-primary"
-            >
-              📄 Télécharger le flyer (PDF)
-            </a>
+          <!-- Petit message humoristique -->
+          <section class="mt-3">
+            <p class="fst-italic">
+              Astuce : Ubuntu vous laisse vraiment jouer avec tout,
+              contrairement à Windows 😏
+            </p>
           </section>
         </div>
       </div>
