feat: quizz app

--- a/ubuntu/ubuntu.html
+++ b/ubuntu/ubuntu.html
@@ -81,6 +81,14 @@
         <img src="./assets/img/windows-xp-icon.png" class="icon-img" />
         <p class="icon-label">Retour en Enfer</p>
       </div>
+      <div
+        class="icon"
+        style="grid-column: 2; grid-row: 1"
+        onclick="goTo('apps/quiz.html')"
+      >
+        <img src="./assets/img/cerveau.png" class="icon-img" />
+        <p class="icon-label">Quiz</p>
+      </div>
     </div>
   </body>
 </html>
