--- a/ubuntu/apps/demarche-libre.html
+++ b/ubuntu/apps/demarche-libre.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="../ubuntu.css" />
     <script src="../ubuntu.js"></script>
 
-    <link rel="stylesheet" href="../assets/img/demarche-libre.css" />
-    <script src="../assets/img/demarche-libre.js"></script>
+    <link rel="stylesheet" href="../assets/demarche-libre.css" />
+    <script src="../assets/demarche-libre.js"></script>
   </head>
   <body>
     <!-- Barre du haut -->
