--- a/ubuntu/apps/femmes-informatique.html
+++ b/ubuntu/apps/femmes-informatique.html
@@ -94,7 +94,7 @@
           <!-- Flyer -->
           <section class="mb-4 text-center">
             <a
-              href="../assets/img/video/flyer.pdf"
+              href="../assets/document/flyer.pdf"
               download
               class="btn btn-primary"
             >
